✨ feat(config): Update config files and dependencies
✨ Remove unnecessary .gitignore entries, update pm to use bun instead of yarn + add bun.lockb file

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,13 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+.env.development
+.env.local
+.env.production
+.history
+.DS_Store
+.env.development.local
+dl-d-fi.code-workspace
+graphql
+moises-gql.js
