--- a/package.json
+++ b/package.json
@@ -17,25 +17,27 @@
   "author": "Sayem Chowdhury",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.26.1",
-    "browser-id3-writer": "^4.4.0",
-    "delay": "^5.0.0",
-    "node-html-parser": "^5.3.3",
-    "p-queue": "^6.6.2",
-    "spotify-uri": "^2.2.0",
+    "@types/bun": "^1.0.12",
+    "@types/p-queue": "^3.2.1",
+    "axios": "^1.5.1",
+    "browser-id3-writer": "^6.0.0",
+    "delay": "^6.0.0",
+    "node-html-parser": "^6.1.10",
+    "p-queue": "^8.0.1",
+    "spotify-uri": "^4.0.0",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.23",
+    "@types/node": "^20.8.0",
     "@types/spotify-web-api-node": "^5.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "ava": "^4.1.0",
-    "eslint": "^8.11.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "ava": "^5.3.1",
+    "eslint": "^8.50.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "ava": {
     "extensions": [
